--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <img src="./images/header-logo.svg" alt="логотип проекта" class="header__logo">
       <div class="header__lang">
-        <a href="#" class="header__lang-link header__lang-link_ru" target="_blank">Ru</a>
+        <a href="#" class="header__lang-link header__lang-link_action" target="_blank">Ru</a>
         <a href="#" class="header__lang-link" target="_blank">En</a>
       </div>
     </header>
@@ -45,115 +45,115 @@
           километров по родной стране. Мы выбрали и описали некоторые
           интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия <span class="intro__span">юнеско-12</span></li>
-          <li>Объектов культурного наследия <span class="intro__span">юнеско-12</span></li>
-          <li>Природных заповедников 105</li>
-          <li>Аэропортов 241</li>
+          <li><span class="intro__list_text">Часовых поясов</span> 11</li>
+          <li><span class="intro__list_text">Объектов природного наследия <span class="intro__span">юнеско</span></span> 12</li>
+          <li><span class="intro__list_text">Объектов культурного наследия <span class="intro__span">юнеско</span></span> 16</li>
+          <li><span class="intro__list_text">Природных заповедников</span> 105</li>
+          <li><span class="intro__list_text">Аэропортов</span> 241</li>
         </ul>
       </section>
       <!--Секция photo-grid-->
       <div class="photo-grid">
         <ul class="photo-grid__item">
-          <li><img src="./images/photo-grid-train.jpg" alt="фото из окна поезда" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-atharva-tulsi.jpg" alt="фото заснеженых гор" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-tuman.jpg" alt="фото тумана" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-sochi.jpg" alt="фото Сочи" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-arisa.jpg" alt="" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-baikal.jpg" alt="фото Байкала" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-elbrus.jpg" alt="фото Эльбруса" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-kamchatka-1.jpg" alt="фото Камчатка" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-kamchatka-2.jpg" alt="фото Камчатка 2" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-baikal-2.jpg" alt="фото Байкала 2" class="photo-grid__img"></li>
-          <li><img src="./images/photo-grid-ergaki.jpg" alt="фото природный парк Ергаки" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-train.jpg" alt="вид из окна поезда" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-atharva-tulsi.jpg" alt="заснеженые горы" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-tuman.jpg" alt="туманный пейзад" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-sochi.jpg" alt="горный лес в Сочи" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-arisa.jpg" alt="машина на льду Байкала" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-baikal.jpg" alt="озеро Байкал" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-elbrus.jpg" alt="горы в Приэльбрусье" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-kondratiev.jpg" alt="волнорезы на пляже" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-kamchatka-1.jpg" alt="гейзеры на Камчатке" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-kamchatka-2.jpg" alt="вулкан на Камчатке" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-baikal-2.jpg" alt="берег Байкала" class="photo-grid__img"></li>
+          <li><img src="./images/photo-grid-ergaki.jpg" alt="природный парк Ергаки" class="photo-grid__img"></li>
         </ul>
       </div>
       <!--Секция places-->
       <div class="places">
-        <article class="places__item">
-          <h2 class="places__title">Куршская коса</h2>
-          <div class="places__website-item">
-            <p class="places__website places__website_url-heading"><span class="places__span">url</span></p>
-            <a href="http://park-kosa.ru" class="places__website places__website_link" target="_blank">park-kosa.ru</a>
+        <article class="place">
+          <h2 class="place__title">Куршская коса</h2>
+          <div class="place__website-item">
+            <p class="place__website"><span class="place__span">url</span></p>
+            <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
           </div>
-          <img class="places__image" src="./images/place-kosa.jpg" alt="фото Куршская коса">
-          <div class="places__description">
-            <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
+          <div class="place__description">
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
               — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
               Уникальная природная зона на краю российского анклава.</p>
-            <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
               исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
               россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие
               природы и запах стального, прохладного моря.</p>
           </div>
         </article>
-        <article class="places__item">
-          <h2 class="places__title">Кольский</h2>
-          <div class="places__website-item">
-            <p class="places__website places__website_url-heading"><span class="places__span">url</span></p>
+        <article class="place">
+          <h2 class="place__title">Кольский</h2>
+          <div class="place__website-item">
+            <p class="place__website"><span class="place__span">url</span></p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-              class="places__website places__website_link" target="_blank">National Geographic</a>
+              class="place__link" target="_blank">National Geographic</a>
           </div>
-          <img class="places__image" src="./images/place-kolsky.jpg" alt="фото Кольский полуостров">
-          <div class="places__description">
-            <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+          <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров">
+          <div class="place__description">
+            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
               которой на юг —
               тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-            <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
+            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
               фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
               географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от
               апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
               в Мурманск.</p>
           </div>
         </article>
-        <article class="places__item">
-          <h2 class="places__title">Алтай</h2>
-          <div class="places__website-item">
-            <p class="places__website places__website_url-heading"><span class="places__span">url</span></p>
-            <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="places__website places__website_link"
+        <article class="place">
+          <h2 class="place__title">Алтай</h2>
+          <div class="place__website-item">
+            <p class="place__website"><span class="place__span">url</span></p>
+            <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link"
               target="_blank">YouTube
             </a>
           </div>
-          <img class="places__image" src="./images/place-altai.jpg" alt="фото Алтай">
-          <div class="places__description">
-            <p class="places__paragraph">Алтай — одно из красивейших мест в России.
+          <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
+          <div class="place__description">
+            <p class="place__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
               озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
               горным воздухом.</p>
-            <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
+            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
               увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а
               на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
         </article>
-        <article class="places__item">
-          <h2 class="places__title">Зимний Байкал</h2>
-          <div class="places__website-item">
-            <p class="places__website places__website_url-heading"><span class="places__span">url</span></p>
-            <a href="https://vk.com/baikalmile" class="places__website places__website_link"
+        <article class="place">
+          <h2 class="place__title">Зимний Байкал</h2>
+          <div class="place__website-item">
+            <p class="place__website"><span class="place__span">url</span></p>
+            <a href="https://vk.com/baikalmile" class="place__link"
               target="_blank">https://vk.com/baikalmile</a>
           </div>
-          <img class="places__image" src="./images/place-winter-baikal.jpg" alt="фото зимний Байкал">
-          <div class="places__description">
-            <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
+          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="зимний Байкал">
+          <div class="place__description">
+            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
               России.</p>
-            <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
               скийорингу. Это такой вид спорта, когда лыжник привязывает себя
               к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
               фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
         </article>
-        <article class="places__item">
-          <h2 class="places__title">Карелия</h2>
-          <div class="places__website-item">
-            <p class="places__website places__website_url-heading"><span class="places__span">url</span></p>
-            <a href="http://vodlozero.ru" class="places__website places__website_link"
+        <article class="place">
+          <h2 class="place__title">Карелия</h2>
+          <div class="place__website-item">
+            <p class="place__website"><span class="place__span">url</span></p>
+            <a href="http://vodlozero.ru" class="place__link"
               target="_blank">http://vodlozero.ru/</a>
           </div>
-          <img class="places__image" src="./images/place-karelia.jpg" alt="фото Карелия">
-          <div class="places__description">
-            <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+          <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
+          <div class="place__description">
+            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
               лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
               национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
               полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
