--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           километров по родной стране. Мы выбрали и описали некоторые
           интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li><span class="intro__list_text">Часовых поясов</span> 11</li>
-          <li><span class="intro__list_text">Объектов природного наследия <span class="intro__span">юнеско</span></span> 12</li>
-          <li><span class="intro__list_text">Объектов культурного наследия <span class="intro__span">юнеско</span></span> 16</li>
-          <li><span class="intro__list_text">Природных заповедников</span> 105</li>
-          <li><span class="intro__list_text">Аэропортов</span> 241</li>
+          <li><span class="intro__list-text">Часовых поясов</span> 11</li>
+          <li><span class="intro__list-text">Объектов природного наследия <span class="intro__span">юнеско</span></span> 12</li>
+          <li><span class="intro__list-text">Объектов культурного наследия <span class="intro__span">юнеско</span></span> 16</li>
+          <li><span class="intro__list-text">Природных заповедников</span> 105</li>
+          <li><span class="intro__list-text">Аэропортов</span> 241</li>
         </ul>
       </section>
       <!--Секция photo-grid-->
