--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
+  <title>Путешествия по России</title>
   <link href="pages/index.css" rel="stylesheet">
 </head>
 
@@ -53,7 +53,7 @@
         </ul>
       </section>
       <!--Секция photo-grid-->
-      <div class="photo-grid">
+      <section class="photo-grid">
         <ul class="photo-grid__item">
           <li><img src="./images/photo-grid-train.jpg" alt="вид из окна поезда" class="photo-grid__img"></li>
           <li><img src="./images/photo-grid-atharva-tulsi.jpg" alt="заснеженые горы" class="photo-grid__img"></li>
@@ -68,9 +68,9 @@
           <li><img src="./images/photo-grid-baikal-2.jpg" alt="берег Байкала" class="photo-grid__img"></li>
           <li><img src="./images/photo-grid-ergaki.jpg" alt="природный парк Ергаки" class="photo-grid__img"></li>
         </ul>
-      </div>
+      </section>
       <!--Секция places-->
-      <div class="places">
+      <section class="places">
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website-item">
@@ -161,7 +161,7 @@
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
         </article>
-      </div>
+      </section>
       <!--Секция cover-->
       <section class="cover">
         <a href="#" class="cover__item" target="_blank">
